# zhiweitong

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
cli/: __init__.py  generators.py  main.py  promotion.py
config/: __init__.py  settings.py
core/: __init__.py  command_payload.py  event_bus.py  event_bus_factory.py  evolution.py  evolution_promotion.py  knowledge_store.py  observability.py  orchestrator.py  org_tree.py  redis_event_bus.py  sandbox.py  skill_base.py  skill_command_gateway.py  skill_registry.py  state_manager.py
docs/: LEGACY.md  event-contract-summary.md  event_topics.md  evolution-promotion-professional-plan.md  handbook-gap-and-industrialization.md  ops-runbook.md  orchestrator-llm.md  ralph-loop.md  vertical-slice-l3-integration.md  vertical-slices.md
shared/: __init__.py  errors.py  integration_client.py  models.py  org_canonical.py  slice_l2.py  system_topics.py  vertical_slices.py
skills/: __init__.py
tests/: __init__.py  conftest.py  test_audit_review_skill.py  test_cli_phase3.py  test_command_payload.py  test_dotenv_loading.py  test_event_bus.py  test_event_bus_factory.py  test_evolution_engine.py  test_evolution_promotion.py  test_integration_client.py  test_knowledge_store.py  test_observability.py  test_orchestrator.py  test_org_tree.py  test_phase2_department_skills.py  test_promote_apply.py  test_promote_preview.py  test_quick_consumption_flow.py  test_quick_consumption_skills.py  test_redis_event_bus.py  test_sandbox.py  test_settings.py  (+24 more)
(+56 files in other folders)
